WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132778
Block exceptions when trying to convert attributed strings to RTF and RTFD
https://bugs.webkit.org/show_bug.cgi?id=132778
Summary
Block exceptions when trying to convert attributed strings to RTF and RTFD
Anders Carlsson
Reported
2014-05-10 12:33:56 PDT
Block exceptions when trying to convert attributed strings to RTF and RTFD
Attachments
Patch
(4.46 KB, patch)
2014-05-10 12:46 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-05-10 12:46:58 PDT
Created
attachment 231228
[details]
Patch
Anders Carlsson
Comment 2
2014-05-10 12:49:16 PDT
Committed
r168579
: <
http://trac.webkit.org/changeset/168579
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug