Block exceptions when trying to convert attributed strings to RTF and RTFD https://bugs.webkit.org/show_bug.cgi?id=132778 <rdar://problem/16675805>

Reviewed by Darin Adler.

When the iOS WebHTMLConverter was upstreamed, converting some attributed strings to RTF and RTFD
started throwing Objective-C exceptions (see <rdar://problem/16876920>).

In WebKit2, we now crash on unhandled exceptions so work around that crash by adding exception blocking macros.

* editing/ios/EditorIOS.mm:
(WebCore::dataInRTFDFormat):
(WebCore::dataInRTFFormat):
* editing/mac/EditorMac.mm:
(WebCore::dataInRTFDFormat):
(WebCore::dataInRTFFormat):

Canonical link: https://commits.webkit.org/150824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168579 268f45cc-cd09-0410-ab3c-d52691b4dbfc